[package]
name = "hinsdale"
version = "2.0.0"
edition = "2021"
description = "EVM bytecode decompiler with DeFi analytics — Rust core, Python FFI"
authors = ["Aureon/DL System"]
license = "UNLICENSED"

[lib]
name = "hinsdale"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "hinsdale-cli"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
rayon = "1.8"
indexmap = "2"
smallvec = "1"
rustc-hash = "1"
lazy_static = "1"
pyo3 = { version = "0.21", features = ["extension-module"], optional = true }

[features]
default = []
python = ["pyo3"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.release-termux]
inherits = "release"
opt-level = "z"
