[package]
name = "nexus-core"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "1.1.0", features = ["full", "rpc-types-eth", "providers", "signers", "signer-local", "transport-http"] }
alloy-sol-types = "1.1.0"
alloy-contract = "1.1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
eyre = "0.6"
